apps/postgres-admin/base/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: postgres-admin
spec:
  selector:
    app: pgadmin
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
